--- a/LogIn/login.css
+++ b/LogIn/login.css
@@ -1,5 +1,9 @@
-.body{
-    font-family:Arial, Helvetica, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap');
+*{
+    font-family: "Poppins", sans-serif;
+}
+body{
+    background-color: black;
 }
 .container{
     display: flex;
@@ -8,18 +12,20 @@
     justify-content: space-between;
     width: 100%;
     height: 600px;
-    border: 2px solid #00A2E8;
+    border: 2px solid rgba(199, 199, 8, 0.726);
     border-radius: 40% 25% 74% 25% / 34% 25% 75% 41%;
-    background-color: #00A2E8;
-    box-shadow: #00A2E8 0px 5px 15px;
+    background-color: rgba(199, 199, 8, 0.726);
+    box-shadow: rgba(199, 199, 8, 0.726) 0px 5px 15px;
 }
 .title{
     margin-top: 80px;
     margin-left: 60px;
 }
 .title> h1{
-    
+    /* font-family: "Edu AU VIC WA NT Hand", cursive; */
+    font-family: "Poppins", sans-serif;
     font-size: 60px;
+    color: white;
 }
 .form{
     margin-right: 130px ;
@@ -33,7 +39,7 @@
     width: 300px;
     border: 2px solid white;
     border-radius: 15px;
-    padding: 10px ;
+    padding: 40px ;
     background-color: white;
 }
 .info{
@@ -43,6 +49,7 @@
 
 label{
     font-size: 25px;
+    margin-left: 15px;
 }
 input{
     font-size: 25px;
@@ -50,13 +57,14 @@ input{
     padding: 8px ;
 }
 button{
-    background-color: #00A2E8;
-    border:  2px solid #00A2e8;
+    background-color: black;
+    border:  2px solid black;
     border-radius: 25px;
     font-size: 20px ;
     padding: 12px;
+    color: white;
 }
 button:hover{
     cursor: pointer;
-    box-shadow: #00A2E8 0px 5px 10px;
+    box-shadow: yellow 0px 5px 10px;
 }
