--- a/WellCome/wellcome.css
+++ b/WellCome/wellcome.css
@@ -1,17 +1,20 @@
+body{
+    background-color: black;
+}
 .container{
     width: 100%;
     height: 600px;
-    border: 2px solid #00A2E8;
+    border: 2px solid rgba(199, 199, 8, 0.726);
     border-radius: 40% 25% 74% 25% / 34% 25% 75% 41%;
-    background-color: #00A2E8;
-    box-shadow: #00A2E8 0px 5px 15px;
+    background-color: rgba(199, 199, 8, 0.726);
+    box-shadow: rgba(199, 199, 8, 0.726) 0px 5px 15px;
 }
 
 .wellcome{
     display: flex;
     flex-direction: column;
     margin: 60px;
-    
+    color: white;
 }
 h2{
     margin-top: 20px;
@@ -32,13 +35,14 @@ h2{
 button{
     width: 250px;
     margin-right: 35px;
-    background-color: #00A2E8;
-    border:  2px solid #00A2e8;
+    background-color: white;
+    border:  2px solid white;
     border-radius: 25px;
     font-size: 25px ;
     padding: 12px;
+    color: black;
 }
 button:hover{
     cursor: pointer;
-    box-shadow: #00A2E8 0px 5px 10px;
+    box-shadow: yellow 0px 5px 10px;
 }
