--- a/style.css
+++ b/style.css
@@ -82,11 +82,15 @@ body {
     justify-content: space-around;
     flex-direction: row;
     flex-wrap: wrap ;
-    gap: 20px;
+    /* gap: 20px; */
 }
 
 .ToDo-container, .In-Progress-container, .Done-container {
     margin-bottom: 20px;
+    border: 2px solid yellow;
+    border-radius: 12px;
+    width: 33%;
+    padding: 8px;
 }
 
 .head-img {
@@ -116,6 +120,9 @@ body {
 
 .card-body {
     padding: 20px;
+}
+.card-body:hover{
+    box-shadow: 0 0 10px white;
 }
 
 .card-title {
