--- a/TaskManage/style.css
+++ b/TaskManage/style.css
@@ -154,6 +154,9 @@ body {
     margin-bottom: 30px;
     transition: transform 0.5s; 
   }
+  .card:hover{
+    box-shadow: 0 0 10px white;
+  }
   .circle{
     text-align: center;
     width: 19px;
