--- a/LogIn/login.css
+++ b/LogIn/login.css
@@ -12,10 +12,10 @@ body{
     justify-content: space-between;
     width: 100%;
     height: 600px;
-    border: 2px solid rgba(199, 199, 8, 0.726);
+    /* border: 2px solid rgba(17, 142, 214, 0.925);
     border-radius: 40% 25% 74% 25% / 34% 25% 75% 41%;
-    background-color: rgba(199, 199, 8, 0.726);
-    box-shadow: rgba(199, 199, 8, 0.726) 0px 5px 15px;
+    background-color: rgba(17, 142, 214, 0.925);
+    box-shadow: rgba(199, 199, 8, 0.726) 0px 5px 15px; */
     animation: container-fade-in 2s ease-in-out forwards;
 }
 @keyframes container-fade-in {
@@ -98,4 +98,9 @@ button{
 button:hover{
     cursor: pointer;
     box-shadow: yellow 0px 5px 10px;
+}
+
+img{
+  width: 850px;
+  height: 590px;
 }
