--- a/wellcome.css
+++ b/wellcome.css
@@ -1,6 +1,65 @@
 body{
-    background-color: white;
-}
+    background: #ee9ca7;
+    background: -webkit-linear-gradient(to top, #ffdde1, #ee9ca7);
+    background: linear-gradient(to top, #ffdde1, #ee9ca7);
+  }
+  .heading {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px 30px;
+    background: linear-gradient(to right, #ed4264, #ffedbc);
+    border-bottom: 1px solid #e9ecef;
+    position: relative;
+  }
+  .project-name {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .project-name h1 {
+    font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    cursor: pointer;
+  }
+  
+  .project-name h1 {
+    font-size: 24px;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+  }
+  
+  .contact {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 5px 8px;
+    border-radius: 15px;
+    background: linear-gradient(to left, #ed4264, #f9e3a6);
+    transition: 0.5s;
+  }
+  .contact:hover {
+    transform: scale(1.1);
+  }
+  .contact p {
+    font-size: 14px;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+    margin: 0;
+    cursor: pointer;
+  }
+  
+  .content-wrapper {
+    flex: 1;
+    padding: 20px;
+    background-color: #fff;
+    background: #ee9ca7;
+    background: -webkit-linear-gradient(to top, #ffdde1, #ee9ca7);
+    background: linear-gradient(to top, #ffdde1, #ee9ca7);
+  }
 .container{
     display: flex;
     flex-direction: row;
@@ -8,17 +67,17 @@ body{
     flex-wrap: wrap;
     width: 100%;
     height: 600px;
-    border: 2px solid rgba(17, 142, 214, 0.925);
+    /* border: 2px solid rgba(17, 142, 214, 0.925);
     border-radius: 40% 25% 74% 25% / 34% 25% 75% 41%;
-    background-color: rgba(17, 142, 214, 0.925);
-    box-shadow: rgba(199, 199, 8, 0.726) 0px 5px 15px;
+    background-color: #F48950;
+    box-shadow: rgba(199, 199, 8, 0.726) 0px 5px 15px; */
 }
 
 .wellcome{
     display: flex;
     flex-direction: column;
     margin: 60px;
-    color: white;
+    color: black;
 }
 h2{
     margin-top: 20px;
@@ -40,7 +99,7 @@ h2{
 button{
     width: 250px;
     margin-right: 35px;
-    background-color: white;
+    background-color: #ED4264;
     border:  2px solid white;
     border-radius: 25px;
     font-size: 25px ;
@@ -49,7 +108,7 @@ button{
 }
 button:hover{
     cursor: pointer;
-    box-shadow: yellow 0px 5px 10px;
+    box-shadow: #F48950 0px 5px 10px;
 }
 
 img{
