--- a/LogIn/login.css
+++ b/LogIn/login.css
@@ -148,7 +148,7 @@ input{
     font-size: 25px;
     border-radius: 25px;
     padding: 8px ;
-    border-color: rgb(89, 89, 238);
+    border-color: black;
 }
 button{
     width:100%;
@@ -165,14 +165,15 @@ button:hover{
 }
 
 img{
-  width: 850px;
-  height: 590px;
+  width: 600px;
+  height: 600px;
+  border-radius: 25px;
   /* mix-blend-mode: multiply; */
 }
 @media (max-width: 576px) {
   img {
-    width: 400px;
-    height: 280px;
+    width: 350px;
+    height: 350px;
   }
 }
 @media (max-width: 480px) {
